fixed import bug

--- a/llama2-aws-rag.ipynb
+++ b/llama2-aws-rag.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "umM-rU8tGa4v"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2HoCnUasGa4x"
@@ -22,15 +24,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "VVqqgv7CGa4x",
         "jupyter": {
           "outputs_hidden": false
         },
+        "outputId": "79daaf8a-adf5-42b4-9812-9b6d89bd292d",
         "pycharm": {
           "name": "#%%\n"
         },
-        "tags": [],
-        "id": "VVqqgv7CGa4x",
-        "outputId": "79daaf8a-adf5-42b4-9812-9b6d89bd292d"
+        "tags": []
       },
       "outputs": [
         {
@@ -51,6 +53,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "hzeSGel4Ga4z"
@@ -60,6 +63,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "eJjSq0OiGa40"
@@ -94,6 +98,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cQjwldLkGa41"
@@ -106,8 +111,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "4gqC4gkiGa41"
+        "id": "4gqC4gkiGa41",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -119,8 +124,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "udcgLwJdGa42"
+        "id": "udcgLwJdGa42",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -155,9 +160,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "l99F9KmBGa42",
-        "outputId": "a764be86-a007-4a97-aebb-c0c4b33c7c7c"
+        "outputId": "a764be86-a007-4a97-aebb-c0c4b33c7c7c",
+        "tags": []
       },
       "outputs": [
         {
@@ -183,8 +188,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "YP-f_2clGa43"
+        "id": "YP-f_2clGa43",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -203,9 +208,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "xUjoNYRxGa44",
-        "outputId": "60ee6cca-977d-48a0-886f-554d960e24bd"
+        "outputId": "60ee6cca-977d-48a0-886f-554d960e24bd",
+        "tags": []
       },
       "outputs": [
         {
@@ -238,10 +243,11 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "tags": [],
-        "id": "Oxf7OC88Ga45"
+        "id": "Oxf7OC88Ga45",
+        "tags": []
       },
       "source": [
         "## Dataset Preparation"
@@ -251,9 +257,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "dgbPjWqvGa46",
-        "outputId": "04fe94f1-becb-4090-e7c6-4b10a2bc6ad3"
+        "outputId": "04fe94f1-becb-4090-e7c6-4b10a2bc6ad3",
+        "tags": []
       },
       "outputs": [
         {
@@ -274,9 +280,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "c-HZv8mqGa46",
-        "outputId": "332612a8-47ff-4bb6-8f2e-fc7df5bf9318",
         "colab": {
           "referenced_widgets": [
             "8b5cd8dcfc6a4593942acc862ee4f34b",
@@ -289,7 +292,10 @@
             "d40fd9d8c10e4cc59b21a4f1081f7a73",
             ""
           ]
-        }
+        },
+        "id": "c-HZv8mqGa46",
+        "outputId": "332612a8-47ff-4bb6-8f2e-fc7df5bf9318",
+        "tags": []
       },
       "outputs": [
         {
@@ -461,9 +467,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "7QPH8YcsGa46",
-        "outputId": "647bf232-96ae-4944-d4c3-c61ee5004b4f"
+        "outputId": "647bf232-96ae-4944-d4c3-c61ee5004b4f",
+        "tags": []
       },
       "outputs": [
         {
@@ -495,9 +501,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "CJgkH6M4Ga47",
-        "outputId": "34a7f969-0f43-4fd1-d363-206a0f47e1c3"
+        "outputId": "34a7f969-0f43-4fd1-d363-206a0f47e1c3",
+        "tags": []
       },
       "outputs": [
         {
@@ -549,6 +555,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fMnv6Uu7Ga47"
@@ -558,6 +565,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "W97u5M8yGa47"
@@ -569,12 +577,25 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sagemaker\n",
+        "import numpy as np\n",
+        "from sagemaker.huggingface import HuggingFaceModel"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "BYPUvxsKGa48"
+        "id": "BYPUvxsKGa48",
+        "tags": []
       },
       "outputs": [],
       "source": [
+        "role = sagemaker.get_execution_role()\n",
+        "\n",
         "hub_config = {\n",
         "    'HF_MODEL_ID': 'sentence-transformers/all-MiniLM-L6-v2',\n",
         "    'HF_TASK': 'feature-extraction'\n",
@@ -593,9 +614,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "ecibgL9RGa48",
-        "outputId": "17c2d83e-47b6-4b7e-b07b-d03ef6372e5a"
+        "outputId": "17c2d83e-47b6-4b7e-b07b-d03ef6372e5a",
+        "tags": []
       },
       "outputs": [
         {
@@ -618,8 +639,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "V2sJSUo8Ga49"
+        "id": "V2sJSUo8Ga49",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -630,9 +651,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "NxS9Ohp0Ga49",
-        "outputId": "8aed493e-4a03-4dd4-b63e-d2690b3bd11f"
+        "outputId": "8aed493e-4a03-4dd4-b63e-d2690b3bd11f",
+        "tags": []
       },
       "outputs": [
         {
@@ -651,6 +672,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rVaNLEKQGa49"
@@ -663,9 +685,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "KR7N8LhIGa49",
-        "outputId": "567328e0-e1ab-469f-e294-23ce7e7ca747"
+        "outputId": "567328e0-e1ab-469f-e294-23ce7e7ca747",
+        "tags": []
       },
       "outputs": [
         {
@@ -707,9 +729,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "u6ApVA0pGa4-",
-        "outputId": "9d4b2e63-5643-4620-c331-3e2d93b4e423"
+        "outputId": "9d4b2e63-5643-4620-c331-3e2d93b4e423",
+        "tags": []
       },
       "outputs": [
         {
@@ -735,9 +757,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "IY6S9TXoGa4-",
-        "outputId": "cf8d5ffe-1e78-4ba2-b139-661ceb945e0b",
         "colab": {
           "referenced_widgets": [
             "94bead89281f463581feb1e406c6c9a8",
@@ -747,7 +766,10 @@
             "f1efcedbde39461b81abf64c616c801f",
             "531da484a94543c5850f8f23ad03a759"
           ]
-        }
+        },
+        "id": "IY6S9TXoGa4-",
+        "outputId": "cf8d5ffe-1e78-4ba2-b139-661ceb945e0b",
+        "tags": []
       },
       "outputs": [
         {
@@ -849,9 +871,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "oKIWiq6vGa4_",
-        "outputId": "18aafa2e-ad76-47d7-955c-a5c6707c53fc"
+        "outputId": "18aafa2e-ad76-47d7-955c-a5c6707c53fc",
+        "tags": []
       },
       "outputs": [
         {
@@ -890,9 +912,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "JgZDcVmqGa4_",
-        "outputId": "216bf907-592d-4e15-a15c-9e3d013b2f60"
+        "outputId": "216bf907-592d-4e15-a15c-9e3d013b2f60",
+        "tags": []
       },
       "outputs": [
         {
@@ -912,8 +934,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "urnYIRtlGa5A"
+        "id": "urnYIRtlGa5A",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -922,6 +944,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "C3uZYvDYGa5A"
@@ -934,8 +957,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "AEo6CL7nGa5A"
+        "id": "AEo6CL7nGa5A",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -978,8 +1001,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "7lCINVLCGa5B"
+        "id": "7lCINVLCGa5B",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -995,8 +1018,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "RDlSO1h2Ga5B"
+        "id": "RDlSO1h2Ga5B",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -1013,9 +1036,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "9CCztPdiGa5B",
-        "outputId": "876a6640-d865-4b9b-cca6-71ffbff8a647"
+        "outputId": "876a6640-d865-4b9b-cca6-71ffbff8a647",
+        "tags": []
       },
       "outputs": [
         {
@@ -1037,8 +1060,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "T_caher7Ga5B"
+        "id": "T_caher7Ga5B",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -1049,14 +1072,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "B0yAaHf9Ga5C",
-        "outputId": "13cecfb4-6117-42b7-d2d3-0686429c8bae",
         "colab": {
           "referenced_widgets": [
             "cab677cf57854636aa3647fdb36d45ba"
           ]
-        }
+        },
+        "id": "B0yAaHf9Ga5C",
+        "outputId": "13cecfb4-6117-42b7-d2d3-0686429c8bae",
+        "tags": []
       },
       "outputs": [
         {
@@ -1086,9 +1109,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "XXE_4Ts1Ga5C",
-        "outputId": "79da7d54-1e26-43e4-fb02-1508b5c23be0"
+        "outputId": "79da7d54-1e26-43e4-fb02-1508b5c23be0",
+        "tags": []
       },
       "outputs": [
         {
@@ -1110,10 +1133,11 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "tags": [],
-        "id": "N7_TGh7DGa5C"
+        "id": "N7_TGh7DGa5C",
+        "tags": []
       },
       "source": [
         "## Combine the retrieved documents, prompt, and question to query the LLM"
@@ -1123,8 +1147,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "b-VZ3cTQGa5D"
+        "id": "b-VZ3cTQGa5D",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -1147,9 +1171,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "ftY7qt3WGa5D",
-        "outputId": "8dc6c5c4-6e55-4805-becf-56dbe897a3bd"
+        "outputId": "8dc6c5c4-6e55-4805-becf-56dbe897a3bd",
+        "tags": []
       },
       "outputs": [
         {
@@ -1207,9 +1231,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "Tu5tEG1TGa5D",
-        "outputId": "d6548f99-29e7-47c8-e7c4-0413604fa3c5"
+        "outputId": "d6548f99-29e7-47c8-e7c4-0413604fa3c5",
+        "tags": []
       },
       "outputs": [
         {
@@ -1232,9 +1256,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "9kCj8fWNGa5D",
-        "outputId": "867c0b81-e685-4342-9f36-79b995e374bf"
+        "outputId": "867c0b81-e685-4342-9f36-79b995e374bf",
+        "tags": []
       },
       "outputs": [
         {
@@ -1256,6 +1280,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HjQdiRhCGa5D"
@@ -1268,8 +1293,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
-        "id": "lpVI3MJoGa5E"
+        "id": "lpVI3MJoGa5E",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -1292,9 +1317,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "QTjUwDi0Ga5E",
-        "outputId": "14f6045a-8124-4712-9c05-41a66d74e607"
+        "outputId": "14f6045a-8124-4712-9c05-41a66d74e607",
+        "tags": []
       },
       "outputs": [
         {
@@ -1316,9 +1341,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "tags": [],
         "id": "-m0HAq-xGa5E",
-        "outputId": "872c316e-bcd0-4bfc-f73c-7740d3767053"
+        "outputId": "872c316e-bcd0-4bfc-f73c-7740d3767053",
+        "tags": []
       },
       "outputs": [
         {
@@ -1913,6 +1938,9 @@
         "vcpuNum": 96
       }
     ],
+    "colab": {
+      "provenance": []
+    },
     "instance_type": "ml.t3.medium",
     "kernelspec": {
       "display_name": "Python 3 (Data Science)",
@@ -1930,9 +1958,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.10"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
